# SF100Linux

./: .clang-format  .gitignore  60-dediprog.rules  ChipInfoDb.dedicfg  ChipInfoDb.h  FileIO.cpp  FileIO.h  FlashCommand.c  FlashCommand.h  IntelHexFile.c  IntelHexFile.cpp  IntelHexFile.h  LICENSE.txt  Macro.h  Makefile  MotorolaFile.c  MotorolaFile.cpp  MotorolaFile.h  README.md  SF_Linux.IAB  SF_Linux.IAD  SF_Linux.IMB  SF_Linux.IMD  SF_Linux.PFI  SF_Linux.PO  SF_Linux.PR  SF_Linux.PRI  SF_Linux.PS  SF_Linux.WK3  SerialFlash.c  SerialFlash.h  board.c  board.h  dpcmd.c  dpcmd.h  flake.nix  makefile  makefile (copy)  meson.build  parse.c  (+5 more)
.gear/: rules  sf100linux.spec
